12-k8s-1.5/yaml/1-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: nginx
          image: nginx
          ports:
            - containerPort: 80
              name: nginx

---
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  ports:
  - name: nginx
    port: 80
    targetPort: nginx
  selector:
    app: frontend
