12-k8s-1.5/yaml/2-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: multitool
          image: wbitt/network-multitool
          ports:
            - containerPort: 80
              name: multitool

---
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  ports:
  - name: multitool
    port: 80
    targetPort: multitool
  selector:
    app: backend
